[package]
name = "obsrename"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
obws = "0.13.0"
simplelog = "0.12.2"
tokio = { version = "1.43.1", features = ["full"] }
winapi = { version = "0.3.9", features = [
  "winuser",
  "wincon",
  "libloaderapi",
  "shellapi",
] }
lazy_static = "1.4.0"
